k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: lp-backend
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: lp-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lp-backend
spec:
  selector:
    matchLabels:
      app: lp-backend
  template:
    metadata:
      labels:
        app: lp-backend
    spec:
      containers:
      - name: lp-backend
        # Cseréld le a saját elérhetőségedre!
        image: ghcr.io/05zhalasi/lp-backend:latest
        ports:
        - containerPort: 8080
